# TriptiSinestia

./: CMakeLists.txt  README.md  main.cpp
shaders/: centerFragment.frag  leftFragment.frag  rightFragment.frag
